--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 fwknop-gui (1.3-1) unstable; urgency=medium
 
   * First Debian release.
-       Closes: #836688 - ITP: fwknop-gui -- Fwknop graphical user interface
+    - Closes: #836688 - ITP: fwknop-gui -- Fwknop graphical user interface
 
- -- Franck Joncourt <franck@debian.org>  Wed, 31 Aug 2016 22:34:15 +0200
+ -- Franck Joncourt <franck.joncourt@gmail.com>  Fri, 09 Sep 2016 21:37:45 +0200
