--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-fwknop-gui (1.3-1) unstable; urgency=medium
+fwknop-gui (1.3+dfsg-1) unstable; urgency=medium
 
   * First Debian release.
     - Closes: #836688 - ITP: fwknop-gui -- Fwknop graphical user interface
 
- -- Franck Joncourt <franck.joncourt@gmail.com>  Fri, 09 Sep 2016 21:37:45 +0200
+ -- Franck Joncourt <franck.joncourt@gmail.com>  Sat, 10 Sep 2016 18:51:28 +0200
